--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
@@ -29,6 +30,7 @@
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "prettier": "2.3.1",
+    "supertest": "^6.1.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
