--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 PORT=
-
+BASE_URL=
 DATABASE_HOST=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_PORT=
+
+JWT_KEY=
+EMAIL_HOST=
+EMAIL_USER="<your e-mail user>@gmail.com"
+EMAIL_PASSWORD="<your password>"
