--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
-    "build": "rimraf ./build && tsc",
+    "start": "node dist/api/server.js",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist/api --copy-files --no-copy-ignored",
+    "postbuild": "tsc -p tsconfig.build.json --emitDeclarationOnly",
+    "dev": "ts-node-dev -r tsconfig-paths/register --no-notify src/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "test": "jest",
@@ -35,6 +36,11 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/node": "^7.14.9",
+    "@babel/preset-env": "^7.14.9",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
@@ -52,6 +58,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -59,9 +66,9 @@
     "nodemon": "^2.0.7",
     "prettier": "2.3.1",
     "supertest": "^6.1.3",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.8",
-    "ts-jest": "^27.0.4",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.4"
   }
